cursive-bootstrap/tests/ui/E-CON/E-CON-0410.cursive
// RUN: compile-fail
// DIAG: E-CON-0410
// SPEC: 8.9
// DESC: [[dynamic]] on non-procedure declaration

[[dynamic]]
record BadDynamic {  //~ ERROR E-CON-0410: dynamic on non-procedure
    value: i32
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
